# kedro-sphinx-theme

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: publish.yml  rtd-preview.yml  smoke-test.yml  test.yml
docs/source/: conf.py
docs/source/_static/: custom.js
src/kedro_sphinx_theme/: __init__.py
src/kedro_sphinx_theme/assets/styles/: qb1-sphinx-rtd.css
src/kedro_sphinx_theme/theme/kedro-sphinx-theme/: layout.html  theme.conf
tests/: test_build.py  test_import.py  test_layout.py
