[build-system]
requires = ["sphinx-theme-builder >= 0.2.0b2"]
build-backend = "sphinx_theme_builder"

[project]
name = "kedro-sphinx-theme"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
description = "Sphinx theme for the Kedro ecosystem"
dependencies = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    # Regression on sphinx-autodoc-typehints 1.21
    # that creates some problematic docstrings
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "sphinx-notfound-page",
    "myst-parser>=1.0,<2.1",
    "sphinx-last-updated-by-git",
    "sphinx-favicon",
    "sphinxcontrib-youtube",
]
authors = [
    {name = "Juan Luis Cano Rodríguez", email = "juan_luis_cano@mckinsey.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/kedro-org/kedro-sphinx-theme"
tracker = "https://github.com/kedro-org/kedro-sphinx-theme/issues"
documentation = "https://kedro-sphinx-theme.readthedocs.io"

[project.optional-dependencies]
test = [
    "mypy",
    "hypothesis",
    "pytest",
    "pytest-cov",
]
doc = [
    "kedro-sphinx-theme",
]

[project.entry-points."sphinx.html_themes"]
kedro-sphinx-theme = "kedro_sphinx_theme"

[tool.sphinx-theme-builder]
theme-name = "kedro-sphinx-theme"
node-version = "18.19.1"

[tool.ruff]
show-fixes = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "D",  # Pydocstyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# More strict checks for library code
[[tool.mypy.overrides]]
module = "kedro_sphinx_theme"
disallow_untyped_defs = true

# Ignore certain missing imports
# [[tool.mypy.overrides]]
# module = "thirdparty.*"
# ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
